# AE

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: run.sh
src/Dictionary/: CMakeLists.txt  dictionary.cpp  dictionary.h  main.cpp
src/GenericList/: CMakeLists.txt  List.cpp  ListElement.cpp  Point.cpp  main.cpp
src/GenericQueue/: CMakeLists.txt  Queue.cpp  main.cpp
src/IntStack/: CMakeLists.txt  int_stack.cpp  int_stack.h
src/IntStackArray/: CMakeLists.txt  int_stack.cpp  main.cpp
src/IntStackList/: CMakeLists.txt  int_stack.h  int_stack_list.cpp  main.cpp
src/ListIntStack/: CMakeLists.txt  int_stack.h  int_stack_list.cpp  main.cpp  stack_elem.cpp
src/Merge/: CMakeLists.txt  main.cpp  merge.cpp
src/Palindrom/: CMakeLists.txt  main.cpp
src/Shape/: CMakeLists.txt  main.cpp  shape.cpp
